# tetris.c

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.c  shuffle.c  shuffle.h  types.h
